horizontal scroll fixes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -170,7 +170,7 @@ overflow: hidden;
   /* background: rgb(75,0,48);
   background: linear-gradient(114deg, rgba(75,0,48,0.9) 0%, rgba(255,76,139,0.5) 100%); */
  }
-body::before{
+/* body::before{
   content:"";
   position:absolute;
   inset:0;
@@ -187,7 +187,7 @@ body::before{
   z-index:-1;
   background:#cccccc;
   opacity:0.3;
-  }
+  } */
   
 .testbg::before{
   background-image: linear-gradient(rgb(255 255 255), rgb(245 250 255 / 97%)), url(https://d3e0o4zthiks52.cloudfront.net/ey_logo_white.svg);
@@ -1894,9 +1894,9 @@ transition: filter 0.3s;
 }
 
 html{
-  min-width: 555px;
+  /* min-width: 555px;
   scroll-behavior: smooth;
- 
+  */
 
 }
 ::-webkit-scrollbar {
@@ -4444,9 +4444,9 @@ element.style {
 
 }
 
-body > main > nav > div:nth-child(2) > ul > li:last-child{
+/* body > main > nav > div:nth-child(2) > ul > li:last-child{
   display: none;
-}
+} */
 
 .nav {
   background-image: linear-gradient(0deg, rgb(0 255 209 / 5%) 0%, rgba(0, 0, 0, 0) 100%);
